[package]
name = "horizons"
version = "0.0.1-alpha"
edition = "2021"
description = "Rust API for JPL Horizons Ephemeris System"
authors = ["Saadi Save"]
license = "MIT"
repository = "https://www.github.com/saadisave/horizons-rs.git"
rust-version = "1.62"

[dependencies]
serde_urlencoded = "0.7"
thiserror = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]
