[package]
name = "horizons"
version = "0.0.1-alpha"
edition = "2021"
description = "Rust API for JPL Horizons Ephemeris System"
authors = ["Saadi Save"]
license = "MIT"
repository = "https://www.github.com/saadisave/horizons-rs.git"
rust-version = "1.62"

[features]
default = ["uom"]

[dependencies]
thiserror = "1"

[dependencies.uom]
version = "0.33"
default-features = false
optional = true
features = ["si", "autoconvert", "f64"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dev-dependencies]
serde_urlencoded = "0.7"
